# codex-prompt-refinery

./: .env.example  .gitignore  .pylintrc  .ruff.toml  CHANGELOG.md  LICENSE  Makefile  PRD.md  README.md  pyproject.toml
contrib/systemd/: codex-prompt-refinery.service  codex-prompt-refinery.timer
docs/developers/: architecture.md  coding-standards.md  development.md  operations.md  testing.md
docs/users/: cli.md  index.md  troubleshooting.md  ui.md
examples/: atomic-1.md  atomic-2.md  workflow-1.md
src/pdr/: __init__.py  cli.py  cluster.py  config.py  db.py  embed.py  ingest.py  schemas.py  search.py  synthesize.py  ui.py  util.py
tests/: test_db_views.py  test_ingest.py  test_search.py  test_search_filters.py  test_synthesize_schema.py  test_ui_helpers.py  test_ui_smoke.py  test_ui_views_interaction.py  test_util.py
